# DHMS

./: .gitignore  README.md  build.sh  pyproject.toml  requirements.txt
Tests/: __init__.py  conftest.py  test_security.py
accounts/: views.py
accounts/migrations/: 0001_initial.py  0002_initial.py
dhms_api/: asgi.py  manage.py  pytest.ini  requirements.txt
dhms_api/Tests/: test_auth.py  test_proctors.py  test_staff.py  test_students.py
dhms_api/accounts/: admin.py  models.py  serializers.py  signals.py  urls.py
dhms_api/dhms_api/: permissions.py  settings.py  urls.py  wsgi.py
dhms_api/operations/: serializers.py  urls.py  views.py
dhms_api/operations/migrations/: 0001_initial.py
dhms_api/staff/: admin.py  models.py  serializers.py  views.py
dhms_api/students/: admin.py  serializers.py  urls.py  views.py
docs/: README.md
operations/: admin.py  models.py  views.py
staff/: urls.py  views.py
staff/migrations/: 0001_initial.py
students/: models.py  views.py
students/migrations/: 0001_initial.py
